--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,6 +20,10 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Set up JNI libraries
+    - run: |
+        curl -L https://github.com/alexmercerind/shazam-signature-jni/releases/download/v1.0.0/jniLibs.zip -o jniLibs.zip
+        unzip jniLibs.zip -d ./app/src/main
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
@@ -28,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: app-release
-        path: ./app/release/app-release.apk
+        path: ./app/build/outputs/apk/release/app-release.apk
     - name: GitHub release
       uses: softprops/action-gh-release@v1
       if: github.ref == 'refs/heads/main'
@@ -37,4 +41,4 @@ jobs:
         prerelease: false
         tag_name: "vnext"
         files: |
-          ./app/release/app-release.apk
+          ./app/build/outputs/apk/release/app-release.apk
