--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,7 @@ jobs:
         cache: gradle
 
     - name: Set up JNI libraries
-    - run: |
+      run: |
         curl -L https://github.com/alexmercerind/shazam-signature-jni/releases/download/v1.0.0/jniLibs.zip -o jniLibs.zip
         unzip jniLibs.zip -d ./app/src/main
     - name: Grant execute permission for gradlew
