ci: build tools version

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,11 +32,13 @@ jobs:
       uses: r0adkll/sign-android-release@v1   
       id: sign_app
       with:
-       releaseDirectory: ./app/build/outputs/apk/release/
-       signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-       alias: ${{ secrets.ALIAS }}
-       keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}    
-       keyPassword: ${{ secrets.KEY_PASSWORD }}
+        releaseDirectory: ./app/build/outputs/apk/release/
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+      env:
+        BUILD_TOOLS_VERSION: "36.0.0"
     - name: Copy release APK
       run: cp ${{ steps.sign_app.outputs.signedReleaseFile }} ./app/build/outputs/apk/release/app-release-signed.apk
     - name: Upload artifact
